[gd_scene load_steps=36 format=1]

[ext_resource path="res://level_1/level_1.gd" type="Script" id=1]
[ext_resource path="res://demon/eye.png" type="Texture" id=2]
[ext_resource path="res://demon/mouth.png" type="Texture" id=3]
[ext_resource path="res://demon/growl1.wav" type="Sample" id=4]
[ext_resource path="res://demon/growl2.wav" type="Sample" id=5]
[ext_resource path="res://demon/growl3.wav" type="Sample" id=6]
[ext_resource path="res://demon/pain.wav" type="Sample" id=7]
[ext_resource path="res://level_1/level_1_music.ogg" type="AudioStream" id=8]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=9]
[ext_resource path="res://level_1/column.png" type="Texture" id=10]
[ext_resource path="res://camera.tscn" type="PackedScene" id=11]
[ext_resource path="res://level_1/ground.png" type="Texture" id=12]
[ext_resource path="res://power_bar/power_bar.gd" type="Script" id=13]
[ext_resource path="res://ui/white_pixel.png" type="Texture" id=14]
[ext_resource path="res://power_bar/flashing_mat.tres" type="CanvasItemMaterial" id=15]
[ext_resource path="res://power_bar/marker.png" type="Texture" id=16]
[ext_resource path="res://power_bar/text.png" type="Texture" id=17]
[ext_resource path="res://power_bar/frame.png" type="Texture" id=18]
[ext_resource path="res://power_bar/charge.wav" type="Sample" id=19]
[ext_resource path="res://power_bar/lost_power.wav" type="Sample" id=20]
[ext_resource path="res://player/death.wav" type="Sample" id=21]

[sub_resource type="Animation" id=1]

resource/name = "blinking"
length = 5.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("eye_l:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0.3, 0.5, 0.7, 3.08019, 3.28019, 3.48019, 3.93549, 4.13549, 4.33549 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 2, 2, 0, 2, 2, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye_r:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.3, 0.5, 0.7, 3.08019, 3.28019, 3.48019, 3.93549, 4.13549, 4.33549 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 0, 2, 2, 0, 2, 2, 0, 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mouth:frame")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]

resource/name = "fade"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("eye_l:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye_r:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mouth:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.6 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("eye_l:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("eye_r:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("mouth:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=3]

resource/name = "reveal"
length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("eye_l:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("eye_r:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mouth:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.4 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("eye_l:frame")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("eye_r:frame")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0.2, 0.4, 0.6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("mouth:frame")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("anim")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [ "blinking" ],
"method": "play"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("sfx:play/play")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "growl1" ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("eye_l:visibility/opacity")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("eye_r:visibility/opacity")
tracks/10/interp = 1
tracks/10/imported = false
tracks/10/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("mouth:visibility/opacity")
tracks/11/interp = 1
tracks/11/imported = false
tracks/11/keys = {
"times": FloatArray( 1.5 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="SampleLibrary" id=4]

samples/growl1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/growl2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}
samples/growl3 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 6 )
}
samples/pain = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -8.33334, -4.33333, -8.33334, -10.6667, -5.33334, -5.66667, -2.66666, 2 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 5.33334, 5, -2.66666, 2, -5.33334, -5.66667, 8, 3.66667, 8, 4.66667 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( -0.666656, -0.333334, 7.33334, -7, 7.33334, -5.66667, 4.33334, -0.666668, -2, 3 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -8, 3.33333, -0.666656, -0.333334, -2, 3, -8.66666, 5 )

[sub_resource type="Animation" id=9]

length = 70.0
loop = true
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("intro_demon/anim")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 44 ),
"transitions": FloatArray( 1, 1 ),
"values": [ {
"args": [ "reveal" ],
"method": "play"
}, {
"args": [ "reveal" ],
"method": "play"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("intro_demon:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 5, 43.9, 44, 49, 70 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 162, 79 ), Vector2( 426, 79 ), Vector2( 426, 79 ), Vector2( 162, 79 ), Vector2( -112, 79 ), Vector2( -112, 79 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 10, 11, 12, 14, 15, 16, 18, 20, 21, 22, 24, 26, 28, 28.9, 30, 31, 32, 34, 36, 37.1, 38, 40, 41, 42, 50, 51, 52, 53.4, 54, 54.6, 56, 56.6, 58, 58.6, 60, 61, 61.8, 62.9, 64, 65.1, 66, 66.7, 68, 68.6 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "tear"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "demon_eye"
}, {
"args": [  ],
"method": "pillar_tear"
}, {
"args": [  ],
"method": "pillar_tear"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("intro_demon:visibility/visible")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0.1, 5, 7, 44, 44.2 ),
"transitions": FloatArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("intro_demon/sfx:play/play")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 7 ),
"transitions": FloatArray( 1, 1 ),
"update": 2,
"values": [ "growl3", "growl1" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("intro_demon/eye_l:visibility/visible")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 7 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("intro_demon/eye_r:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 7 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("intro_demon/mouth:visibility/visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 7 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:visibility/opacity")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=10]

resource/name = "death"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sfx:play/play")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 2,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "to_weapons"
} ]
}

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 6, 84 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 160, 16 )

[sub_resource type="SampleLibrary" id=13]

samples/charge = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 19 )
}
samples/lost_power = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 20 )
}

[sub_resource type="SampleLibrary" id=14]

samples/death = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 21 )
}

[node name="level_1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="intro_demon" type="Node2D" parent="."]

transform/pos = Vector2( -112, 79 )
transform/scale = Vector2( 3, 3 )

[node name="anim" type="AnimationPlayer" parent="intro_demon"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/blinking = SubResource( 1 )
anims/fade = SubResource( 2 )
anims/reveal = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="eye_l" type="Sprite" parent="intro_demon"]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( -24, -8 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="eye_r" type="Sprite" parent="intro_demon"]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( 26, -8 )
transform/scale = Vector2( -1, 1 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="mouth" type="Sprite" parent="intro_demon"]

visibility/visible = false
visibility/opacity = 0.0
transform/pos = Vector2( 0, 12 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="sfx" type="SamplePlayer" parent="intro_demon"]

config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="eye_area_L" type="Area2D" parent="intro_demon"]

editor/display_folded = true
transform/pos = Vector2( -24.1482, -7.66667 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 6 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="intro_demon/eye_area_L"]

build_mode = 0
polygon = Vector2Array( 8, 4.66667, 8, 3.66667, -5.33334, -5.66667, -8.33334, -10.6667, -8.33334, -4.33333, -2.66666, 2, 5.33334, 5 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="eye_area_R" type="Area2D" parent="intro_demon"]

editor/display_folded = true
transform/pos = Vector2( 26.5185, -7.66667 )
input/pickable = true
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 8 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 3
collision/mask = 3
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="intro_demon/eye_area_R"]

build_mode = 0
polygon = Vector2Array( 7.33334, -7, -0.666656, -0.333334, -8, 3.33333, -8.66666, 5, -2, 3, 4.33334, -0.666668, 7.33334, -5.66667 )
shape_range = Vector2( 0, 1 )
trigger = false

[node name="music" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="player" parent="." instance=ExtResource( 9 )]

transform/pos = Vector2( 162, 140 )
power_bar = NodePath("../bar")

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/auto = SubResource( 9 )
anims/death = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "auto"

[node name="column" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 8, 168 )
input/pickable = false
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -84 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="column"]

transform/pos = Vector2( 0, -84 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="column"]

transform/pos = Vector2( 0, -84 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="column1" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 312, 168 )
input/pickable = false
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -84 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="column1"]

transform/pos = Vector2( 0, -84 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="column1"]

transform/pos = Vector2( 0, -84 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="camera" parent="." instance=ExtResource( 11 )]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 160, 184 )
input/pickable = false
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 3
collision/mask = 3
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]

texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]

visibility/visible = false
shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="bar" type="Node2D" parent="."]

transform/pos = Vector2( 29, 179 )
z/z = 10
script/script = ExtResource( 13 )
value = 100

[node name="bg" type="Sprite" parent="bar"]

visibility/behind_parent = true
transform/pos = Vector2( -16, -3 )
transform/scale = Vector2( 293, 16 )
texture = ExtResource( 14 )
centered = false
modulate = Color( 0, 0, 0, 1 )

[node name="fill" type="Sprite" parent="bar"]

visibility/behind_parent = true
transform/pos = Vector2( -16, -3 )
transform/scale = Vector2( 293, 16 )
texture = ExtResource( 14 )
centered = false

[node name="charge" type="Sprite" parent="bar"]

material/material = ExtResource( 15 )
transform/pos = Vector2( 277, -3 )
transform/scale = Vector2( 1e-05, 16 )
z/z = 1
texture = ExtResource( 14 )
centered = false
modulate = Color( 0.515625, 0.515625, 0.515625, 1 )

[node name="lost_power" type="Sprite" parent="bar"]

visibility/blend_mode = 1
material/material = ExtResource( 15 )
transform/pos = Vector2( 277, -3 )
transform/scale = Vector2( -0.319678, 16 )
texture = ExtResource( 14 )
centered = false
modulate = Color( 1, 0, 0, 1 )

[node name="marker" type="TextureFrame" parent="bar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 275.0
margin/top = -3.0
margin/right = 278.0
margin/bottom = 13.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 2

[node name="Sprite" type="Sprite" parent="bar"]

transform/pos = Vector2( 130, 5 )
texture = ExtResource( 17 )

[node name="Sprite 2" type="Sprite" parent="bar"]

visibility/visible = false
transform/pos = Vector2( 131.25, 5 )
transform/scale = Vector2( 7.93421, 1.91667 )
texture = ExtResource( 18 )
__meta__ = {
"_edit_lock_": true
}

[node name="sfx" type="SamplePlayer" parent="bar"]

config/polyphony = 1
config/samples = SubResource( 13 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sfx" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 14 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="close_eye_spawns" type="Node2D" parent="."]

editor/display_folded = true
visibility/visible = false

[node name="Position2D" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 65.5404, 52.0351 )

[node name="Position2D1" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 159.283, 20.6551 )

[node name="Position2D2" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 252.628, 61.5682 )

[node name="Position2D3" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 285.994, 144.189 )

[node name="Position2D4" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 163.652, 148.161 )

[node name="Position2D5" type="Position2D" parent="close_eye_spawns"]

transform/pos = Vector2( 57.5961, 144.983 )

[connection signal="body_enter" from="intro_demon/eye_area_L" to="." method="_on_eye_area_L_body_enter"]

[connection signal="body_enter" from="intro_demon/eye_area_R" to="." method="_on_eye_area_R_body_enter"]

[connection signal="death" from="bar" to="." method="_on_bar_death"]


